# chipotle

./: .dockerignore  .env.example  .gitignore  0001-generate-client-from-swagger-spec.patch  BUGS.md  CLAUDE.md  DockerEntryPoint.sh  Dockerfile  Dockerfile.lit-actions  Dockerfile.lit-api-server  Dockerfile.lit-static  Dockerfile.otel-collector  Dockerfile.phala  LICENSE  NodeConfig.demo.toml  PLAN.md  Phala.toml  README.md  TODOS.md  docker-compose.phala.yml  justfile  justfile.deploy  justfile.sim  local_test.sh  spec.json  test.sh
lit-actions/ext/: Cargo.toml  bindings.rs  lib.rs  macros.rs
lit-actions/ext/js/: 00_viem.js  02_litActionsSDK.js  05_globalsDocs.js  06_litActionsSDK_viem.js  99_patches.js
lit-actions/server/: Cargo.toml  bundler.rs  cdn_module_loader.rs  import_rewriter.rs  lib.rs  runtime.rs  server.rs  v8_code_cache.rs  worker_pool.rs
lit-api-server/: .gitignore  Cargo.toml  Dockerfile  NodeConfig.demo.sepolia.toml  NodeConfig.demo.toml  NodeConfig.main.toml  NodeConfig.next.toml  NodeConfig.prod.toml  NodeConfig.sample.toml  README.md  Rocket.toml  build.rs  clippy.toml  fly.toml  live_testnet.toml  log_levels.toml  rpc-config.yaml  spec.json
lit-api-server/blockchain/lit_node_express/: Makefile  diamond_deploy-sample.js  generate-diamond-abi.mjs  hardhat.config.ts  package-lock.json  package.json
lit-api-server/blockchain/lit_node_express/contracts/: AccountConfig.sol  AccountConfigFacet.sol  AccountConfigViews.sol  LibAccountConfigStorage.sol
lit-api-server/blockchain/lit_node_express/contracts/AccountConfig/: AccountConfigFacet.sol  LibAccountConfigStorage.sol
lit-api-server/blockchain/lit_node_express/contracts/AccountConfigFacets/: APIConfigFacet.sol  AccountConfigViews.sol  AccountConfigWrites.sol  AppStorage.sol  BillingFacet.sol  DiamondInit.sol  ViewsFacet.sol  (+3 more)
lit-api-server/blockchain/lit_node_express/interfaces/: IDiamond.sol  IDiamondCut.sol  IDiamondLoupe.sol  IERC165.sol  IERC173.sol
lit-api-server/blockchain/lit_node_express/libraries/: LibDiamond.sol
lit-api-server/blockchain/lit_node_express/src/: IDiamond.json  IDiamondCut.json  IDiamondLoupe.json  IERC173.json  i_diamond.rs  i_diamond_cut.rs  i_diamond_loupe.rs  ierc165.rs  ierc173.rs
lit-api-server/blockchain/lit_node_express/tasks/: execute-safe-tx.ts  propose-diamond-cut.ts  propose-dstack-app.ts  transfer-ownership.ts  verify-compose-hash.ts  verify-diamond-facets.ts
lit-api-server/blockchain/rust_generator_and_deployer/: Cargo.toml  README.md
lit-api-server/blockchain/rust_generator_and_deployer/src/: args.rs  common.rs  lib.rs
lit-api-server/blockchain/swaps/: Makefile  package.json
lit-api-server/blockchain/swaps/cache/: compile-cache.json
lit-api-server/blockchain/swaps/contracts/: quote.sol
lit-api-server/config/: default.toml
lit-api-server/src/: build.rs  config.rs  error.rs  lib.rs  main.rs  restart.rs  stripe.rs  version.rs
lit-api-server/src/abstractions/: mod.rs
lit-api-server/src/abstractions/intents/: mod.rs
lit-api-server/src/abstractions/transfer/: btc.rs  chain_info.rs  endpoints.rs  evm.rs  mod.rs  models.rs  non_evm.rs
lit-api-server/src/accounts/: blockchain_cache.rs  chain_config.rs  decode_revert.rs  mod.rs  signable_contract.rs  signer_pool.rs
lit-api-server/src/accounts/contracts/: AccountConfig.json  account_config.rs  account_config_contract.rs  mod.rs
lit-api-server/src/actions/: action_client.rs  aes.rs  grpc.rs  grpc_client_pool.rs  ipfs.rs  job.rs  jobs.rs  mod.rs
lit-api-server/src/actions/client/: client.rs  execution.rs  handle_op_unused.txt  handle_ops.rs  mod.rs  models.rs
lit-api-server/src/core/: account_management.rs  api_status.rs  core_features.rs  internal.rs  lookup_data.rs  mod.rs  models.rs
lit-api-server/src/core/v1/: endpoints.rs  health.rs  mod.rs
lit-api-server/src/dstack/v1/: dstack.rs  endpoints.rs  mod.rs
lit-api-server/src/observability/: fairing.rs  mod.rs
lit-api-server/src/phala/: endpoints.rs  mod.rs
lit-api-server/src/phala/v1/: dstack.rs  endpoints.rs  mod.rs
lit-api-server/src/utils/: chain_info.rs  mod.rs  parse_to_hash.rs  parse_with_hash.rs
lit-api-server/static/: SKILL.md  core_sdk.js  index.html  open_api.html  simple_api_test.html  solidity_contract.html  test.js
lit-api-server/static/dapps/dashboard/: app.js  index.html  styles.css
lit-api-server/static/dapps/solver/: styles.css
lit-api-server/static/dapps/swps/: app.js  index.html
lit-api-server/static/docs/client/: doc.css  js-core-sdk.html  js-swaps-sdk.html
lit-api-server/static/docs/server/: core-sdk.md  pkp-sign.md
lit-api-server/static/sdks/csharp/: lit_sdk.cs
lit-api-server/static/sdks/kotlin/: lit_sdk.kt
lit-api-server/static/sdks/python/: lit_sdk.py
lit-api-server/tests/test_state_cache/: cache_data_store.json
lit-core/lit-observability/: Cargo.toml  README.md
lit-core/lit-observability/src/: channels.rs  lib.rs  metrics.rs  net.rs
lit-core/lit-observability/src/logging/: context_layer.rs  event_format.rs  mod.rs  privacy_filter.rs
lit-core/lit-observability/src/tracing/: mod.rs  propagation.rs
lit-static/: Cargo.toml  SKILL.md  account_config_full_abi.js  account_config_view_abi.js  core_sdk.js  swaps_sdk.js  transfer_sdk.js  tx_lifecycle.js  wallet_connect.js
lit-static/dapps/dashboard/: DESIGN.md  actions.js  app.js  auth.js  billing.js  groups.js  index.html  keys.js  runner.js  styles.css  tx_preview_modal.js  ui-utils.js  wallets.js
lit-static/dapps/monitor/: app.js  index.html
lit-static/dapps/solver/: app.js
lit-static/dapps/swps/: styles.css
lit-static/docs/client/: js-transfer-sdk.html
lit-static/docs/server/: README.md  transfer-sdk.md
lit-static/src/: lib.rs  main.rs
lit-static/static/: core_sdk.js  index.html
lit-static/static/dapps/dashboard/: actions.js  app.js  billing.js  index.html  keys.js  lit_actions.html  runner.js  styles.css  wallets.js
lit-static/static/dapps/litAdmin/: app.js  index.html
lit-static/static/dapps/monitor/: app.js  index.html
lit-static/static/dapps/solver/: index.html
lit-static/static/sdks/swift/: lit_sdk.swift
(+264 files in other folders)
