[package]
name = "lit-api-server"
version = "0.1.0"
edition = "2024"
description = "Simple API for the Lit Node."
license = "Apache-2.0"

[features]
default = []

[dependencies]
apalis = { version = "0.6.0", features = ["tracing"] }
apalis-sql = { version = "0.6.0", features = ["sqlite", "tokio-comp"] }

anyhow = "1.0"
base64_light = "0.1"
derive_builder = "0.12.0"
futures = "0.3.31"
moka = { version = "0.12.7", features = ["future"] }
flume = "0.11.0"

# ed25519-dalek = { version = "2.2", features = ["rand_core"] }
ethers = { version = "2.0.8", features = ["abigen", "legacy"] }
ethers-providers = "2"
# hd-keys-curves-wasm = { version = "1.0.5", default-features = false, features = ["bls", "k256", "p256", "p384", "curve25519", "ed448", "jubjub", "decaf377", "pasta"] }
hex = "0.4"
lit-rust-crypto = { version = "0.6.0", features = [
    "arithmetic",
    "bits",
    "ecdsa",
    "ecdsa-core",
    "digest",
    "hash2curve",
    "hex",
    "rand_core",
    "serde",
    "sha",
    "std",
    "zeroize",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bare = "0.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_responder = "0.1.0"
rocket_cors = { version = "0.6.0" }
reqwest = "0.12.10"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = [
    "transport",
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
# rand_core = "0.6"
lit-core = { path = "../lit-core/lit-core" }
lit-actions-grpc = { path = "../lit-actions/grpc" }
# lit-actions-server = { path = "../lit-actions/server" }
url = "2"

[dev-dependencies]
rand_chacha = "0.3.1"
rand_core = "0.6"


