[package]
name = "lit-api-server"
version = "0.1.0"
edition = "2024"
description = "Simple API for the Lit Node."
license = "Apache-2.0"

[features]
default = []
# Phala TEE attestation. Mandatory in production (auto-enabled by --profile production); optional in dev (--features phala for testing).
phala = []

[dependencies]
apalis = { version = "0.6.0", features = ["tracing"] }
apalis-sql = { version = "0.6.0", features = ["sqlite", "tokio-comp"] }

anyhow = "1.0"
base64_light = "0.1"
derive_builder = "0.12.0"
derive_more = { version = "2" , features = ["display"] }

# ed25519-dalek = { version = "2.2", features = ["rand_core"] }
ethers = { version = "2.0.8", features = ["abigen", "legacy"] }
ethers-providers = "2"

flume = "0.11.0"
futures = "0.3.31"
hex = "0.4"
libaes = { version = "0.7" }

ipfs-hasher = "0.13.0"
# lazy_static = "1.5.0"

# hd-keys-curves-wasm = { version = "1.0.5", default-features = false, features = ["bls", "k256", "p256", "p384", "curve25519", "ed448", "jubjub", "decaf377", "pasta"] }
lit-rust-crypto = { version = "0.6.0", features = [
    "arithmetic",
    "bits",
    "ecdsa",
    "ecdsa-core",
    "digest",
    "hash2curve",
    "hex",
    "rand_core",
    "serde",
    "sha",
    "std",
    "zeroize",
] }
moka = { version = "0.12.7", features = ["future"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bare = "0.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_responder = "0.1.0"
rocket_cors = { version = "0.6.0" }
reqwest = { version = "0.12.10", features = ["json"] }
tracing = "0.1"
toml_edit = "0.22"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = [
    "transport",
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = { version = "0.8" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
# rand_core = "0.6"
lit-core = { path = "../lit-core/lit-core" }
lit-core-derive = { path = "../lit-core/lit-core-derive" }

# lit-api-core = { path = "../lit-core/lit-api-core" }
lit-actions-grpc = { path = "../lit-actions/grpc" }
# lit-actions-server = { path = "../lit-actions/server" }
url = "2"

rocket_okapi = { version = "=0.9.0", features = ["swagger"] }
schemars = "0.8"

[profile.production]
inherits = "release"

[dev-dependencies]
dcap-qvl = "0.3"
tdx-quote = { version = "0.0.5", default-features = false }
rand_chacha = "0.3.1"
rand_core = "0.6"
