[package]
name = "lit-api-server"
version = "0.1.0"
edition = "2024"
description = "Lit Express Node API Server"
license = "Apache-2.0"

[features]
default = []
# Dstack TEE attestation. Use --features dstack for simulator/dev testing.
dstack = []
# Production deploy (Phala CVM): enables dstack + hardcoded dstack socket, no env override.
production = ["dstack", "otlp"]
# OTLP telemetry export via otel-collector sidecar.
otlp = ["lit-observability/otlp"]

[dependencies]
aes-gcm = "0.10"
apalis = { version = "0.6.0", features = ["tracing"] }
apalis-sql = { version = "0.6.0", features = ["sqlite", "tokio-comp"] }

anyhow = "1.0"
base64_light = "0.1"
dstack-sdk = "0.1.2"
derive_builder = "0.12.0"
derive_more = { version = "2" , features = ["display"] }

ethers = { version = "2.0.8", features = ["abigen", "legacy"] }
ethers-providers = "2"
git-version = "0.3.9"
flume = "0.11.0"
futures = "0.3.31"
hex = "0.4"
sha3 = "0.10"
ipfs-hasher = "0.13.0"
elliptic-curve = "0.13.8"
k256 = { version = "0.13.4", features = ["ecdsa"] }
lit-core = { path = "../lit-core/lit-core" }
lit-core-derive = { path = "../lit-core/lit-core-derive" }
lit-observability = { path = "../lit-core/lit-observability", features = ["channels"] }
lit-actions-grpc = { path = "../lit-actions/grpc" }
lit-api-core = { path = "../lit-core/lit-api-core" }

metrics = "0.23"
moka = { version = "0.12.7", features = ["future"] }
num_cpus = "1.16"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bare = "0.1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_responder = "0.1.0"
rocket_cors = { version = "0.6.0" }
reqwest = { version = "0.12.10", features = ["json"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
toml_edit = "0.22"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.12", features = [
    "transport",
    "tls",
    "tls-roots",
    "tls-webpki-roots",
] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = { version = "0.8" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
strum = "0.28.0"
strum_macros = "0.28.0"
url = "2"

rocket_okapi = { version = "=0.9.0", features = ["swagger"] }
schemars = "0.8"

[build-dependencies]
blake3 = "1"
walkdir = "2.5"

[dev-dependencies]
dcap-qvl = "0.3"
tdx-quote = { version = "0.0.5", default-features = false }
rand_chacha = "0.3.1"
rand_core = "0.6"
