[package]
name = "lit-static"
version = "0.1.0"
edition = "2021"
description = "Static assets (SDKs, docs, dapps) for Lit API server"
license = "Apache-2.0"

[[bin]]
name = "lit-static"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
