[package]
name = "lit-actions-ext"
description = "Lit Actions Deno extension"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
path = "lib.rs"
test = false
doctest = false

[dependencies]
atty = "0.2"
deno_core = { workspace = true }
deno_error = { workspace = true }
ethabi = { version = "18", default-features = false, features = ["serde"] }
flume = { workspace = true }
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
lazy_static = "1"
lit-actions-grpc = { workspace = true }
lit-observability = { workspace = true, features = ["channels"] }
serde_json = { workspace = true }
tiny-keccak = { version = "2", features = ["keccak"] }
tonic = { workspace = true }
tracing = { workspace = true }
