[package]
name = "lit-actions-server"
description = "Run JS code in a sandboxed Deno environment"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[lib]
path = "lib.rs"
doctest = false

[dependencies]
anyhow = { workspace = true }
base64 = "0.22"
deno_core = { workspace = true }
deno_error = { workspace = true }
deno_lib = { workspace = true }
deno_resolver = { workspace = true }
deno_runtime = { workspace = true }
flume = { workspace = true }
futures = "0.3"
indoc = { workspace = true }
ipfs-hasher = "0.13.0"
lit-actions-ext = { workspace = true }
lit-actions-grpc = { workspace = true }
lit-api-core = { workspace = true }
lit-observability = { workspace = true, features = ["channels"] }
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = { workspace = true }
sha2 = "0.10"
swc_atoms = "=0.6.7"
swc_bundler = "=0.237.0"
swc_common = { version = "=0.37.5", features = ["tty-emitter"] }
swc_ecma_ast = "=0.118.2"
swc_ecma_codegen = "=0.155.1"
swc_ecma_loader = "=0.49.1"
swc_ecma_parser = "=0.149.1"
swc_ecma_transforms_base = "=0.145.0"
swc_ecma_utils = "=0.134.2"
swc_ecma_visit = "=0.104.8"
sys_traits = { workspace = true }
temp-file = "0.1"
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
url = "2"

[build-dependencies]
lit-actions-ext = { workspace = true }
lit-actions-snapshot = { workspace = true }
