[package]
name = "lit-observability"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
testing = ["ansi", "tracing-log"]
ansi = []
tracing-log = ["dep:tracing-log"]
channels = ["dep:flume", "otlp"]
otlp = ["dep:opentelemetry-otlp", "dep:opentelemetry_sdk", "dep:tracing-opentelemetry"]

[dependencies]
dashmap = "6"
derive_more.workspace = true
flume = { version = "0.11", optional = true }
nu-ansi-term = { version = "0.50.1" }
opentelemetry.workspace = true
opentelemetry-otlp = { workspace = true, features = ["logs"], optional = true }
opentelemetry-semantic-conventions.workspace = true
opentelemetry_sdk = { workspace = true, features = ["logs"], optional = true }
tokio.workspace = true
tonic = "0.12"
tonic-middleware = "0.2"
tower = "0.5"
tracing = { workspace = true, features = ["std"] }
tracing-log = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "std"] }
tracing-opentelemetry = { workspace = true, optional = true }

[dependencies.lit-core]
path = "../lit-core"

[dependencies.lit-core-derive]
path = "../lit-core-derive"

[dependencies.lit-logging]
path = "../lit-logging"
features = ["service"]